# lattice-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  smoke-grandchild-swap.mjs  smoke-multidepth-swap.mjs  smoke-multinode-convergence.mjs  smoke-restart-resilience.mjs  smoke-stateless.mjs  smoke-swap.mjs  smoke-variable-rate-swap.mjs  vite.config.ts
docs/: reactive-refactor.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  node.rs
src/api/: client.ts  types.ts
src/components/: ChainSelector.tsx  CodeEditor.tsx  Layout.tsx
src/hooks/: queries.ts  useNode.ts  useWallet.ts
src/pages/: Dashboard.tsx  Explorer.tsx  Foundry.tsx  NodeControl.tsx  Settings.tsx  Trading.tsx  Wallet.tsx
src/realtime/: useNodeEvents.ts
src/tauri/: bootstrap.ts
src/wallet/: identityFile.ts  keystore.ts  signer.ts  transaction.ts
